[package]
name = "rust-rcs-client"
version = "0.3.0"
edition = "2021"
description = "A simple, workable RCS client library."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

name = "rust_rcs_client"
crate-type = ["rlib", "cdylib"]

[dependencies]

rust-rcs-core = { path = "../rust-rcs-core", version = "0.2" }

rust-strict-sdp = { version = "0.1" }

backtrace = { version = "0.3" }
base64 = { version = "0.13" }
chrono = { version = "0.4" }
cookie = { version = "0.16" }
futures = { version = "0.3" }
libc = { version = "0.2" }
quick-xml = { version = "0.23" }
rustls = { version = "0.20" }
rustls-pemfile = { version = "1.0" }
tokio = { version = "1.19", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1" }
url = { version = "2.2" }
urlencoding = { version = "2.1" }
uuid = { version = "1.1", features = ["v4"] }
walkdir = { version = "2.3" }
